// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notifications > should render in xs 1`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-155s9if"
          data-testid="TableRow"
        >
          <td
            class="flex-col space-y-4 py-4"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Sender
              </div>
              <div
                class="flex w-full items-center space-x-0 text-right"
              >
                <div
                  class="w-0 flex-1 pr-2"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy
                    </span>
                  </div>
                </div>
                <div
                  class="shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 193, 7)" width="100" height="100"/><circle r="40" cx="40" cy="60" fill="rgb(205, 220, 57)"/><circle r="45" cx="70" cy="50" fill="rgb(33, 150, 243)"/><circle r="35" cx="0" cy="40" fill="rgb(156, 39, 176)"/></svg>"
                      title="DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="rounded px-1.5 css-givenh"
                color="success-bg"
              >
                <div
                  class="flex space-x-1 items-stretch"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 2`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-155s9if"
          data-testid="TableRow"
        >
          <td
            class="flex-col space-y-4 py-4"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Sender
              </div>
              <div
                class="flex w-full items-center space-x-0 text-right"
              >
                <div
                  class="w-0 flex-1 pr-2"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy
                    </span>
                  </div>
                </div>
                <div
                  class="shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 193, 7)" width="100" height="100"/><circle r="40" cx="40" cy="60" fill="rgb(205, 220, 57)"/><circle r="45" cx="70" cy="50" fill="rgb(33, 150, 243)"/><circle r="35" cx="0" cy="40" fill="rgb(156, 39, 176)"/></svg>"
                      title="DK1f5frUPTNqhFxoyDUHwN7VC2B4Uzhpmy"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
              >
                Amount
              </div>
              <div
                class="rounded px-1.5 css-givenh"
                color="success-bg"
              >
                <div
                  class="flex space-x-1 items-stretch"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 3`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-155s9if"
          data-testid="TableRow"
        >
          <td
            class="w-3/5"
          >
            <div
              class="items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pl-6 rounded-l flex space-x-3"
            >
              <div
                class="flex items-center -space-x-1"
                data-testid="TransactionRowMode"
              >
                <div
                  class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-1nqcsx"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="received"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r justify-end"
            >
              <div
                class="rounded px-1.5 css-givenh"
                color="success-bg"
              >
                <div
                  class="flex space-x-1 items-stretch"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 4`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-155s9if"
          data-testid="TableRow"
        >
          <td
            class="w-3/5"
          >
            <div
              class="items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pl-6 rounded-l flex space-x-3"
            >
              <div
                class="flex items-center -space-x-1"
                data-testid="TransactionRowMode"
              >
                <div
                  class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-1nqcsx"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="received"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r justify-end"
            >
              <div
                class="rounded px-1.5 css-givenh"
                color="success-bg"
              >
                <div
                  class="flex space-x-1 items-stretch"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render in xs 5`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-155s9if"
          data-testid="TableRow"
        >
          <td
            class="w-3/5"
          >
            <div
              class="items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pl-6 rounded-l flex space-x-3"
            >
              <div
                class="flex items-center -space-x-1"
                data-testid="TransactionRowMode"
              >
                <div
                  class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-1nqcsx"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="received"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r justify-end"
            >
              <div
                class="rounded px-1.5 css-givenh"
                color="success-bg"
              >
                <div
                  class="flex space-x-1 items-stretch"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`Notifications > should render notification item 1`] = `
<div>
  <table>
    <tbody>
      <div>
        <tr
          class="group css-155s9if"
          data-testid="TableRow"
        >
          <td
            class="w-3/5"
          >
            <div
              class="items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pl-6 rounded-l flex space-x-3"
            >
              <div
                class="flex items-center -space-x-1"
                data-testid="TransactionRowMode"
              >
                <div
                  class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background duration-100 css-1nqcsx"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="received"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1n9jllj"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-base text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                  </span>
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r justify-end"
            >
              <div
                class="rounded px-1.5 css-givenh"
                color="success-bg"
              >
                <div
                  class="flex space-x-1 items-stretch"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    + 20 DARK
                  </span>
                </div>
              </div>
            </div>
          </td>
        </tr>
      </div>
    </tbody>
  </table>
</div>
`;
